# cargo-metadata-resolver

./: Cargo.toml  ReadMe.md
.github/workflows/: auto-publish  auto-publish.yml  rust.yml
src/: fetch_metadata.rs  main.rs
src/cdp/: fetch_metadata.rs  mod.rs
src/cdp/models/: cargofile.rs  dep_shape.rs  dep_value.rs  metadata.rs  mod.rs  package_info.rs  response_body.rs
