[package]
name = "cargo-metadata-resolver"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.6"
serde = { version = "1.0.171", features = ["derive"] }
dict = "0.1.5"
serde_json = "1.0.100"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
chrono = "0.4.26"
