[package]
name = "cargo-metadata-resolver"
authors = "Stephen Seaton <stephen@seatoncode.com>"
description = "This is an executable designed to get you the current package's metadata in json format. This was a \"learn how to rust\" project for me so don't expect a large amount of updates/improvements."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Bored0ne/cargo-metadata-resolver"
readme = "ReadMe.md"
license = "Beerware"
keywords = ["cargo", "metadata", "resolver", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.6"
serde = { version = "1.0.171", features = ["derive"] }
dict = "0.1.5"
serde_json = "1.0.100"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
chrono = "0.4.26"
